# agent

./: .envrc  .gitignore  CLAUDE.md  PROJECT_GUIDELINES.md  README.md  analyze_errors.py  anthropic_cache.json  bot_tester.py  pyproject.toml  shell.nix
.cursor/: mcp.json  run_mcp.sh
.github/workflows/: build_and_test.yml  ci_cd_pipeline.yml  pipeline.yml
agent/: ApplicationTest.ipynb  ApplicationTest3.ipynb  Builder.ipynb  CLAUDE.md  DockerSandoxTest.ipynb  Dockerfile  FreshFSM.ipynb  HandlerTestScratchpad.ipynb  Interpolation.ipynb  IterationTest.ipynb  PolicyTest.ipynb  Scratchpad.ipynb  TestServer.ipynb  analyze.py  analyze_streamlit.py  api.py  api_sandbox.py  app-prompts.txt  application.py  application2.py  application3.py  apps.csv  bulk_creator.py  capabilities.py  check_docker.py  claude_integration.py  commands.py  common.py  debug.ipynb  debug.py  fsm_api.py  fsm_tools.py  gen.local.sh  gen.prod.sh  gen.stage.sh  log.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  (+9 more)
agent/analysis/: app.py  trace_loader.py  utils.py
agent/api/: agent_server_api.py  config.py  docker_utils.py  fsm_api.py  fsm_tools.py  snapshot_utils.py
agent/compiler/: core.py
agent/core/: diff_utils.py  feature_flags.py  interpolator.py  path_utils.py  postgres_utils.py  statemachine.py  workspace.py
agent/dotnet_agent/: agent_server_session.py
agent/evals/: test_drizzle_generation.py  test_handlers_generation.py  (+1 more)
mcp_tools/: run_mcp.sh
rusty/: Cargo.toml  __init__.py  __init__.pyi  pyproject.toml  rusty.pyi
rusty/src/: lib.rs
rusty/tests/: test_config.py
(+203 files in other folders)
