[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py310"] }
once_cell = "1.19" # Added for lazy static initialization

[features]
# Enable this feature to support Python 3.13+
python-3-13 = []

[build-dependencies]
pyo3-build-config = "0.20.3"