[build-system]
requires = ["maturin>=1.4.0,<2.0.0"]
build-backend = "maturin"

[project]
name = "rusty"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rusty.rusty"
binding = "pyo3"
# Set environment variables for the build process
environment.PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.uv]
# This helps uv track changes to Rust files for rebuilding
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
